--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Calculator</title>
-    <script src="js/scripts.js"></script>
+
   </head>
   <body>
+    <h1>Calculator</h1>
+    <script src="js/scripts.js"></script>
 
   </body>
 </html>
