--- a/index.html
+++ b/index.html
@@ -1,13 +1,40 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Calculator</title>
 
-  </head>
-  <body>
-    <h1>Calculator</h1>
-    <script src="js/scripts.js"></script>
+<head>
+  <title>Calculator</title>
+  <link href="css/bootstrap-3.3.7-dist/css/bootstrap.css" rel="stylesheet" type="text/css">
+  <link href="css/style.css" rel="stylesheet" type="text/css">
+  <script src="js/jquery-3.3.1.min.js" charset="utf-8"></script>
+  <script src="js/scripts.js"></script>
+</head>
 
-  </body>
+<body>
+  <div class="container">
+    <div class="jumbotron">
+      <h1>Calculator</h1>
+    </div>
+    <form id="add">
+      <div class="form-group">
+        <label for="add1">1st number:</label>
+        <input id="add1" class="form-control" type="text">
+      </div>
+      <div class="form-group">
+        <label for="add2">2nd number:</label>
+        <input id="add2" class="form-control" type="text">
+      </div>
+      <button type="submit" class="btn btn-success">Add!</button>
+    </form>
+    <br>
+    <div id="output">
+    </div>
+    <br>
+    <h4>Here have a break !</h4>
+    <div class="form-group">
+        <label for="born">Date of birth:</label>
+        <input id="born" class="form-control" type="date">
+      </div>
+  </div>
+</body>
+
 </html>
